SentryNative/SentryNative.cs


        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_dist", ExactSpelling = true)]
        public static extern void sentry_options_set_dist([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* dist);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_dist", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_options_get_dist([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_http_proxy", ExactSpelling = true)]
        public static extern void sentry_options_set_http_proxy([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* proxy);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_http_proxy", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_options_get_http_proxy([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_ca_certs", ExactSpelling = true)]
        public static extern void sentry_options_set_ca_certs([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_ca_certs", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_options_get_ca_certs([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_debug", ExactSpelling = true)]
        public static extern void sentry_options_set_debug([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, int debug);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_debug", ExactSpelling = true)]
        public static extern int sentry_options_get_debug([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_logger", ExactSpelling = true)]
        public static extern void sentry_options_set_logger([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("sentry_logger_function_t")] IntPtr func, [NativeTypeName("void *")] void* userdata);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_auto_session_tracking", ExactSpelling = true)]
        public static extern void sentry_options_set_auto_session_tracking([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, int val);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_auto_session_tracking", ExactSpelling = true)]
        public static extern int sentry_options_get_auto_session_tracking([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_require_user_consent", ExactSpelling = true)]
        public static extern void sentry_options_set_require_user_consent([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, int val);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_require_user_consent", ExactSpelling = true)]
        public static extern int sentry_options_get_require_user_consent([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_symbolize_stacktraces", ExactSpelling = true)]
        public static extern void sentry_options_set_symbolize_stacktraces([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, int val);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_get_symbolize_stacktraces", ExactSpelling = true)]
        public static extern int sentry_options_get_symbolize_stacktraces([NativeTypeName("const sentry_options_t *")] sentry_options_s* opts);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_add_attachment", ExactSpelling = true)]
        public static extern void sentry_options_add_attachment([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_handler_path", ExactSpelling = true)]
        public static extern void sentry_options_set_handler_path([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_database_path", ExactSpelling = true)]
        public static extern void sentry_options_set_database_path([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_add_attachmentw", ExactSpelling = true)]
        public static extern void sentry_options_add_attachmentw([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const wchar_t *")] ushort* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_handler_pathw", ExactSpelling = true)]
        public static extern void sentry_options_set_handler_pathw([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const wchar_t *")] ushort* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_database_pathw", ExactSpelling = true)]
        public static extern void sentry_options_set_database_pathw([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, [NativeTypeName("const wchar_t *")] ushort* path);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_options_set_system_crash_reporter_enabled", ExactSpelling = true)]
        public static extern void sentry_options_set_system_crash_reporter_enabled([NativeTypeName("sentry_options_t *")] sentry_options_s* opts, int enabled);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_init", ExactSpelling = true)]
        public static extern int sentry_init([NativeTypeName("sentry_options_t *")] sentry_options_s* options);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_shutdown", ExactSpelling = true)]
        public static extern int sentry_shutdown();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_clear_modulecache", ExactSpelling = true)]
        public static extern void sentry_clear_modulecache();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_user_consent_give", ExactSpelling = true)]
        public static extern void sentry_user_consent_give();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_user_consent_revoke", ExactSpelling = true)]
        public static extern void sentry_user_consent_revoke();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_user_consent_reset", ExactSpelling = true)]
        public static extern void sentry_user_consent_reset();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_user_consent_get", ExactSpelling = true)]
        public static extern sentry_user_consent_t sentry_user_consent_get();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_capture_event", ExactSpelling = true)]
        [return: NativeTypeName("sentry_uuid_t")]
        public static extern sentry_uuid_s sentry_capture_event([NativeTypeName("sentry_value_t")] sentry_value_u @event);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_handle_exception", ExactSpelling = true)]
        public static extern void sentry_handle_exception([NativeTypeName("const sentry_ucontext_t *")] sentry_ucontext_s* uctx);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_add_breadcrumb", ExactSpelling = true)]
        public static extern void sentry_add_breadcrumb([NativeTypeName("sentry_value_t")] sentry_value_u breadcrumb);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_user", ExactSpelling = true)]
        public static extern void sentry_set_user([NativeTypeName("sentry_value_t")] sentry_value_u user);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_remove_user", ExactSpelling = true)]
        public static extern void sentry_remove_user();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_tag", ExactSpelling = true)]
        public static extern void sentry_set_tag([NativeTypeName("const char *")] sbyte* key, [NativeTypeName("const char *")] sbyte* value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_remove_tag", ExactSpelling = true)]
        public static extern void sentry_remove_tag([NativeTypeName("const char *")] sbyte* key);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_extra", ExactSpelling = true)]
        public static extern void sentry_set_extra([NativeTypeName("const char *")] sbyte* key, [NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_remove_extra", ExactSpelling = true)]
        public static extern void sentry_remove_extra([NativeTypeName("const char *")] sbyte* key);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_context", ExactSpelling = true)]
        public static extern void sentry_set_context([NativeTypeName("const char *")] sbyte* key, [NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_remove_context", ExactSpelling = true)]
        public static extern void sentry_remove_context([NativeTypeName("const char *")] sbyte* key);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_set_fingerprint", ExactSpelling = true)]
        public static extern void sentry_set_fingerprint([NativeTypeName("const char *")] sbyte* fingerprint);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_remove_fingerprint", ExactSpelling = true)]
        public static extern void sentry_remove_fingerprint();
